--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@lob/react-address-autocomplete": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
@@ -17,7 +18,9 @@
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.23.0",
     "react-datetime": "^3.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
